name:                verify-package-set
version:             0.1.0.0
synopsis:            Verifies the PureScript package set builds
description:         Please see README.md
homepage:            https://github.com/paf31/purescript-package-db
license:             BSD3
license-file:        LICENSE
author:              Phil Freeman
maintainer:          paf31@cantab.net
copyright:           2016 Phil Freeman
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Verify
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , lens
                     , system-filepath
                     , text
                     , turtle
  default-language:    Haskell2010

executable verify-package-set
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , lens
                     , system-filepath
                     , turtle
                     , verify-package-set
  default-language:    Haskell2010
